syntax = "proto3";

package track;

option go_package = "github.com/MusicSocial/upload/proto";

message CreateTrackRequest {
  string name = 1;
  repeated string artist_ids = 2;
  int32 duration = 3;
  string genre = 4;
}

message CreateTrackResponse {
  string track_id = 1;
}

service TrackService {
  rpc CreateTrack (CreateTrackRequest) returns (CreateTrackResponse);
}
